refactor(compatibility): add optional route parameters
add parameters to support the usage of this webservice with the initial unoconv moodle plugin
